--- a/simons/index.html
+++ b/simons/index.html
@@ -1,82 +1,44 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	<title>Playground</title>
-	<script type="text/javascript" src="three.js"></script>
-	<script type="text/javascript" src="jquery-3.1.1.js"></script>
-	<link href="style.css" type="text/css" rel="stylesheet" />
-	</head>
-	<body>
-	<div id="glcontainer"></div>
-	<script type="text/javascript">
+    <head>
+        <title>WAMS</title>
+        <meta http-equiv='content-type' content='text/html; charset=utf-8'>
+        <link href="styles/bootstrap-3.0.2.min.css" rel="stylesheet">
+        <link href="styles/style.css" type="text/css" rel="stylesheet">
+        <script src="scripts/jquery-1.10.2.min.js"></script>
+        <script src="scripts/bootstrap-3.0.2.min.js"></script>
+        <script src="scripts/three.js"></script>
+    </head>
+    <body>
+        <header class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="Index.html">WAMS</a>
+              </div>
+            <nav class="nav navbar-nav" role="navigation">
+              <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav">
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </header>
+                            
+        <div class="container">
+          <div class="row">
+            <button class="btn"><input type="file" id="files" name="files[]" /></button>
+            <button id="layout" class="btn">Layout</button>
+          </div>
+        </div>
 
-			var cap;
-
-		$(function() {
-			var scene = new THREE.Scene();
-			var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-			var renderer = new THREE.WebGLRenderer();
-			renderer.autoClear = true;
-			renderer.setSize(window.innerWidth, window.innerHeight);
-			var axis = new THREE.AxisHelper(20);
-
-			var loader = new THREE.ObjectLoader();
-
-			
-			loader.load(
-			    // resource URL
-			    "Capacitor.json",
-			
-			    // pass the loaded data to the onLoad function.
-			//Here it is assumed to be an object
-			    function ( obj ) {
-					//add the loaded object to the scene
-					this.cap = obj;
-			        scene.add( obj );
-			    },
-			
-			    // Function called when download progresses
-			    function ( xhr ) {
-			        console.log( (xhr.loaded / xhr.total * 100) + '% loaded' );
-			    },
-			
-			    // Function called when download errors
-			    function ( xhr ) {
-			        console.error( 'An error happened' );
-			    }
-			);
-
-			var planeGeometry = new THREE.PlaneGeometry(60, 20, 1, 1);
-			var planeMaterial = new THREE.MeshBasicMaterial({color:0xEEEEEE});
-			var plane = new THREE.Mesh(planeGeometry, planeMaterial);
-			//plane.rotation.y = -0.5*Math.PI;
-			plane.position.x = 0;
-			plane.position.y = 0;
-			plane.position.z = 0;
-
-			scene.add(plane);
-
-
-			camera.position.x = 0;
-			camera.position.y = 0;
-			camera.position.z = 50;
-			camera.lookAt(plane.position);
-
-
-			var istrue = false;
-			function render() {
-				if(this.cap !== undefined && istrue !== true) {
-					this.cap.rotation.y += (0.01);
-				}
-			requestAnimationFrame(render)
-			renderer.render(scene, camera);
-			}
-
-			$("#glcontainer").append(renderer.domElement);
-			render();
-
-		});
-
-	</script>
-	</body>
+        <div id="glcontainer"></div>
+        <script src="scripts/graph-parser.js"></script>
+        <script type="text/javascript" src="scripts/graphics.js"> </script>
+    </body>
 </html>
