Started real camera implementation - directives on how to use it can be found on the bottom of the page. Will continue with making the WASD-movement more lifelike, as well as better and smoother shifting between cameras and when reseting.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,20 @@
           </div>
         </div>
         <div id="glcontainer"></div>
+        <script src="scripts/camera.js"></script>
         <script src="scripts/graph-parser.js"></script>
         <script type="text/javascript" src="scripts/graphics.js"> </script>
+        <div style="margin:10px;">
+        <h4><strong>Camera controls:</strong></h4>
+        <strong>Right-Click + W/A/S/D:</strong> Look and move around.
+        <br>
+        <strong>Left-Click + mouse-move:</strong> Click and drag around in x- and y-axis.
+        <br>
+        <strong>Scroll:</strong> Move forward / backward.
+        <br>
+        <strong>Tab:</strong> Change camera projection matrix between Orthographic and Perspective.
+        <br>
+        <strong>Escape:</strong> Reset camera.
+        </div>
     </body>
 </html>
