--- a/index.html
+++ b/index.html
@@ -29,6 +29,62 @@
             </nav>
           </div>
         </header>
+    <script src="scripts/GeometryUtils.js"></script>
+        <!-- replace built-in triangulation with Earcut -->
+    <script src="scripts/earcut.js"></script>
+    <script>
+      THREE.ShapeUtils.triangulateShape = function ( contour, holes ) {
+
+        function removeDupEndPts( points ) {
+
+          var l = points.length;
+          if ( l > 2 && points[ l - 1 ].equals( points[ 0 ] ) ) {
+
+            points.pop();
+
+          }
+
+        }
+
+        function addContour( vertices, contour ) {
+
+          for ( var i = 0; i < contour.length; i ++ ) {
+
+            vertices.push( contour[ i ].x );
+            vertices.push( contour[ i ].y );
+
+          }
+
+        }
+
+        removeDupEndPts( contour );
+        holes.forEach( removeDupEndPts );
+
+        var vertices = [];
+        addContour( vertices, contour );
+        var holeIndices = [];
+        var holeIndex = contour.length;
+        for ( i = 0; i < holes.length; i ++ ) {
+
+          holeIndices.push( holeIndex );
+          holeIndex += holes[ i ].length;
+          addContour( vertices, holes[ i ] );
+
+        }
+
+        var result = earcut( vertices, holeIndices, 2 );
+        var grouped = [];
+        for ( var i = 0; i < result.length; i += 3 ) {
+
+          grouped.push( result.slice( i, i + 3 ) );
+
+        }
+
+        return grouped;
+
+      };
+      
+    </script>
                             
         <div class="container">
           <div class="row">
@@ -37,6 +93,8 @@
           </div>
         </div>
         <div id="glcontainer"></div>
+        <script src="scripts/camera-controls.js"></script>
+        <script src="scripts/FlyControls.js"></script>
         <script src="scripts/camera.js"></script>
         <script src="scripts/graph-parser.js"></script>
         <script type="text/javascript" src="scripts/graphics.js"> </script>
