--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
         <script type="text/javascript" src="scripts/graphics.js"> </script>
         <div style="margin:10px;">
         <h4><strong>Camera controls:</strong></h4>
-        <strong>Right-Click + W/A/S/D:</strong> Look and move around.
+        <strong>W/A/S/D</strong> Move around.
+        <br>
+        <strong>Q/E</strong> Spin around.
+        <br>
+        <strong>Right-Click + mouse-move:</strong> Look around.
         <br>
         <strong>Left-Click + mouse-move:</strong> Click and drag around in x- and y-axis.
         <br>
