Was tougher than I thought to get calculate / layout to work. But not it should be fine. Also changed the text on icons showing

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         <div class="container">
           <div class="row">
             <button class="btn"><input type="file" id="files" name="files[]" /></button>
-            <button id="layout" class="btn">Layout</button>
+            <button id="calculate" class="btn">Calculate</button>
+            <button id="display" class="btn">Display</button>
           </div>
         </div>
         <div id="glcontainer"></div>
