now using svg icons. old page using the backup json files exists in /simon

--- a/simons/index.html
+++ b/simons/index.html
@@ -29,16 +29,91 @@
             </nav>
           </div>
         </header>
+    <script src="scripts/GeometryUtils.js"></script>
+        <!-- replace built-in triangulation with Earcut -->
+    <script src="scripts/earcut.js"></script>
+    <script>
+      THREE.ShapeUtils.triangulateShape = function ( contour, holes ) {
+
+        function removeDupEndPts( points ) {
+
+          var l = points.length;
+          if ( l > 2 && points[ l - 1 ].equals( points[ 0 ] ) ) {
+
+            points.pop();
+
+          }
+
+        }
+
+        function addContour( vertices, contour ) {
+
+          for ( var i = 0; i < contour.length; i ++ ) {
+
+            vertices.push( contour[ i ].x );
+            vertices.push( contour[ i ].y );
+
+          }
+
+        }
+
+        removeDupEndPts( contour );
+        holes.forEach( removeDupEndPts );
+
+        var vertices = [];
+        addContour( vertices, contour );
+        var holeIndices = [];
+        var holeIndex = contour.length;
+        for ( i = 0; i < holes.length; i ++ ) {
+
+          holeIndices.push( holeIndex );
+          holeIndex += holes[ i ].length;
+          addContour( vertices, holes[ i ] );
+
+        }
+
+        var result = earcut( vertices, holeIndices, 2 );
+        var grouped = [];
+        for ( var i = 0; i < result.length; i += 3 ) {
+
+          grouped.push( result.slice( i, i + 3 ) );
+
+        }
+
+        return grouped;
+
+      };
+      
+    </script>
                             
         <div class="container">
           <div class="row">
             <button class="btn"><input type="file" id="files" name="files[]" /></button>
-            <button id="layout" class="btn">Layout</button>
+            <button id="calculate" class="btn">Calculate</button>
+            <button id="display" class="btn">Display</button>
           </div>
         </div>
-
         <div id="glcontainer"></div>
+        <script src="scripts/camera-controls.js"></script>
+        <script src="scripts/FlyControls.js"></script>
+        <script src="scripts/camera.js"></script>
         <script src="scripts/graph-parser.js"></script>
         <script type="text/javascript" src="scripts/graphics.js"> </script>
+        <div style="margin:10px;">
+        <h4><strong>Camera controls:</strong></h4>
+        <strong>W/A/S/D</strong> Move around.
+        <br>
+        <strong>Q/E</strong> Spin around.
+        <br>
+        <strong>Right-Click + mouse-move:</strong> Look around.
+        <br>
+        <strong>Left-Click + mouse-move:</strong> Click and drag around in x- and y-axis.
+        <br>
+        <strong>Scroll:</strong> Move forward / backward.
+        <br>
+        <strong>Tab:</strong> Change camera projection matrix between Orthographic and Perspective.
+        <br>
+        <strong>Escape:</strong> Reset camera.
+        </div>
     </body>
 </html>
