Changed around -> now using json files. if json files doesnt exist, it doesnt do anything yet. later on, will try to load svg instead

--- a/simons/index.html
+++ b/simons/index.html
@@ -8,6 +8,7 @@
         <script src="scripts/jquery-1.10.2.min.js"></script>
         <script src="scripts/bootstrap-3.0.2.min.js"></script>
         <script src="scripts/three.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.7.6/fabric.min.js"></script>
     </head>
     <body>
         <header class="navbar navbar-inverse navbar-fixed-top">
@@ -85,6 +86,10 @@
       };
       
     </script>
+
+    <canvas id="c">
+
+    </canvas>
                             
         <div class="container">
           <div class="row">
