--- a/simons/index.html
+++ b/simons/index.html
@@ -72,7 +72,6 @@
           holeIndices.push( holeIndex );
           holeIndex += holes[ i ].length;
           addContour( vertices, holes[ i ] );
-
         }
 
         var result = earcut( vertices, holeIndices, 2 );
@@ -94,6 +93,7 @@
             <button class="btn"><input type="file" id="files" name="files[]" /></button>
             <button id="calculate" class="btn">Calculate</button>
             <button id="display" class="btn">Display</button>
+            <button id="display-model" class="btn">Display Model</button>
           </div>
         </div>
         <div id="glcontainer"></div>
@@ -105,8 +105,6 @@
         <div style="margin:10px;">
         <h4><strong>Camera controls:</strong></h4>
         <strong>W/A/S/D</strong> Move around.
-        <br>
-        <strong>Q/E</strong> Spin around.
         <br>
         <strong>Right-Click + mouse-move:</strong> Look around.
         <br>
