--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
             <button id="display" class="btn btn-primary">Display Graph</button>
             <button id="display-model" class="btn btn-primary">Display Model</button>
             <button id="animate-model" class="btn btn-primary">Animate Model</button>
+            <input type="checkbox" id="looping">Looping</input>
+            <input type="checkbox" id="bouncing">Loop Bounce</input>
             <button class="btn btn-default" onclick="document.getElementById('animation').click();" >Browse Animation...</button>
           </div>
         </div>
