--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
         <header class="navbar navbar-fixed-top">
             <a class="navbar-brand" href="Index.html">WAMS</a>
         </header>
-                           
-        <div class="container">
           <div class="row">
           <input style="display:none;" type="file" id="file" name="files[]" />
           <input style="display:none;" type="file" id="model" name="files[]" />
             <input style="display:none;" type="file" id="animation" name="files[]" />
-          <div class="col-lg-4">
+          <div class="col-lg-2 col-lg-offset-1">
             <button class="btn btn-default" onclick="document.getElementById('file').click();">Browse Graph...</button>
             <div class="row"></div>
             <button id="calculate" class="btn btn-primary">Calculate Graph</button>
             <button id="display" class="btn btn-primary">Display Graph</button>
+          </div>
+          <div class="col-lg-1">
+          <button class="btn btn-danger" id="clear">Clear Scene</button>
           </div>
           <div class="col-lg-2">
             <button class="btn btn-default" onclick="document.getElementById('model').click();" id="browse-model">Browse Model...</button>
             <div class="row"></div>
             <button class="btn btn-default" onclick="document.getElementById('animation').click();" id="browse-animation">Browse Animation...</button>
           </div>
-            <div class="col-lg-3">
+            <div class="col-lg-2">
                 <strong>Animation controls</strong>
                 <div class="row"></div>
                 <input class="animation-controls" id="animation-slider" data-slider-id='animation-slider-id' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="0.1" data-slider-value="0"/>
@@ -46,7 +47,6 @@
             <div class="row"></div>
           </div>
           </div>
-        </div>
 
         <div id="glcontainer"></div>
 
