--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
           <input style="display:none;" type="file" id="file" name="files[]" />
           <input style="display:none;" type="file" id="model" name="files[]" />
             <input style="display:none;" type="file" id="animation" name="files[]" />
-          <div class="col-lg-2 col-lg-offset-1">
+          <div class="col-xs-3 col-xs-offset-1">
             <button class="btn btn-default" onclick="document.getElementById('file').click();">Browse Graph...</button>
             <div class="row"></div>
             <button id="calculate" class="btn btn-primary">Calculate Graph</button>
             <button id="display" class="btn btn-primary">Display Graph</button>
           </div>
-          <div class="col-lg-1">
+          <div class="col-xs-2">
           <button class="btn btn-danger" id="clear">Clear Scene</button>
           </div>
-          <div class="col-lg-2">
+          <div class="col-xs-2">
             <button class="btn btn-default" onclick="document.getElementById('model').click();" id="browse-model">Browse Model...</button>
             <div class="row"></div>
             <button class="btn btn-default" onclick="document.getElementById('animation').click();" id="browse-animation">Browse Animation...</button>
           </div>
-            <div class="col-lg-2">
+            <div class="col-xs-3">
                 <strong>Animation controls</strong>
                 <div class="row"></div>
                 <input class="animation-controls" id="animation-slider" data-slider-id='animation-slider-id' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="0.1" data-slider-value="0"/>
