Improved picking and changed camera - maybe we want a button to control which type of camera we are using?

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="scripts/bootstrap-3.0.2.min.js"></script>
         <link href="styles/bootstrap-slider.min.css" type="text/css" rel="stylesheet">
         <script src="scripts/bootstrap-slider.min.js"></script>
+
     </head>
     <body>
         <header class="navbar navbar-fixed-top">
@@ -49,10 +50,11 @@
           </div>
 
         <div id="glcontainer"></div>
-
         <script src="scripts/three.js"></script>
+        <script src="scripts/orbit-controls.js"></script>
         <script src="scripts/GeometryUtils.js"></script>
         <script src="scripts/earcut.js"></script>
+        <script src="scripts/transform-controls.js"></script>
         <script src="scripts/camera-controls.js"></script>
         <script src="scripts/camera.js"></script>
         <script src="scripts/graph-parser.js"></script>
