--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <header class="navbar navbar-fixed-top">
             <a class="navbar-brand" href="Index.html">WAMS</a>
         </header>
-            <div class="row">
+            <div class="row"></div>
           <input style="display:none;" type="file" id="file" name="files[]" />
-          <div class="col-md-1">
+          <div class="col-md-2 col-xs-6">
             <button class="btn btn-default" onclick="document.getElementById('file').click();">Browse...</button>
           </div>
-            <div style="text-align: center;" class="col-md-3">
+            <div class="col-md-3 col-xs-6">
                 <strong>Animation controls</strong>
                 <div class="row"></div>
                 <input class="animation-controls" id="animation-slider" data-slider-id='animation-slider-id' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="0.1" data-slider-value="0"/>
@@ -31,7 +31,7 @@
             <button class="btn btn-primary disabled" id="pause">Pause</button>
             <button class="btn btn-primary disabled" id="stop">Stop</button>
           </div>
-          <div style="text-align: center;" class="col-md-2">
+          <div class="col-md-3 col-xs-6">
                 <strong >Selected Object</strong>
                 <div class="row"></div>
                 <button class="btn btn-primary disabled" id="clone">Clone</button>
@@ -40,7 +40,7 @@
                 <div class="row"></div>
                 <button class="btn btn-primary disabled" id="rotate90">Rotate</button>
           </div>
-          <div style="text-align: center;" class="col-md-2">
+          <div class="col-md-3 col-xs-6">
                 <strong >Object Control Mode
                     <input style="width:16px;height:16px;" type="checkbox" id="2d-control-mode"/> 2D
                 </strong>
@@ -52,7 +52,7 @@
                 <div class="row"></div>
                 <button class="btn" id="scaling">Scaling</button>
           </div>
-          </div>
+          <div class="row"></div>
 
         <div id="glcontainer"></div>
         <script src="scripts/three.js"></script>
@@ -69,14 +69,11 @@
 
         <div style="margin:10px;">
         <h4><strong>Camera controls:</strong></h4>
-        <strong>Right-Click</strong> Orbit around.
-        <strong>Right-Click + mouse-move:</strong> Look around. -->
+        <strong>Left-Click</strong> Orbit around.
         <br>
-        <strong>Left-Click + mouse-move:</strong> Click and drag around in x- and y-axis.
+        <strong>Right-Click + mouse-move:</strong> Click and drag around in x- and y-axis.
         <br>
         <strong>Scroll:</strong> Move forward / backward.
-        <br>
-        <strong>Tab:</strong> Change camera projection matrix between Orthographic and Perspective.
         <br>
         <strong>Escape:</strong> Reset camera.
         </div>
