Implemented 2D control mode. Started revamp of coupling. Selection now more clear.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <button class="btn btn-primary disabled" id="rotate90">Rotate</button>
           </div>
           <div class="col-md-3 col-xs-6">
-                <strong >Object Control Mode
-                    <input style="width:16px;height:16px;" type="checkbox" id="2d-control-mode"/> 2D
+                <strong >
+                    <input style="width:16px;height:16px;" type="checkbox" id="2d-control-mode" checked/> 2D Object Control Mode
                 </strong>
 
                 <div class="row"></div>
@@ -62,7 +62,8 @@
         <script src="scripts/hooks.js"></script>
         <script src="scripts/animator.js"></script>
         <script src="scripts/orbit-controls.js"></script>
-        <script src="scripts/transform-controls.js"></script>
+        <script src="scripts/transform-controls2d.js"></script>
+        <script src="scripts/transform-controls3d.js"></script>
         <script src="scripts/camera.js"></script>
         <script src="scripts/graph-parser.js"></script>
         <script src="scripts/graphics.js"></script>
