--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
         <div id="glcontainer"></div>
         <script src="scripts/three.js"></script>
+        <script src="klayjs.js"></script>
         <script src="scripts/globals.js"></script>
         <script src="scripts/input.js"></script>
         <script src="scripts/utils.js"></script>
