Added more global controls and text

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
         <div id="glcontainer"></div>
         <script src="scripts/three.js"></script>
+        <script src="scripts/stats.js"></script>
         <script src="klayjs.js"></script>
         <script src="scripts/globals.js"></script>
         <script src="scripts/input.js"></script>
@@ -78,6 +79,8 @@
         <strong>Scroll:</strong> Move forward / backward.
         <br>
         <strong>Escape:</strong> Reset camera.
+        <br>
+        <strong>Tab:</strong> Show / Hide stats.
         </div>
     </body>
 </html>
