Continued cleaning up and clearifying code. Added more options to globals.js

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div id="glcontainer"></div>
         <script src="scripts/three.js"></script>
         <script src="scripts/stats.js"></script>
+        <script src="scripts/extensions.js"></script>
         <script src="klayjs.js"></script>
         <script src="scripts/globals.js"></script>
         <script src="scripts/input.js"></script>
