Started saving graphs

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <strong >Input</strong>
                 <div class="row"></div>
             <button class="btn btn-default" onclick="document.getElementById('file').click();">Browse...</button>
+            <div class="row"></div>
+            <button class="btn btn-default" id="save">Save</button>
           </div>
           <div class="col-md-2 col-xs-6">
                 <strong >Camera</strong>
@@ -58,8 +60,9 @@
         <script src="scripts/three.js"></script>
         <script src="scripts/stats.js"></script>
         <script src="scripts/extensions.js"></script>
-        <script src="klayjs.js"></script>
         <script src="scripts/globals.js"></script>
+        <script src="scripts/filesaver.js"></script>
+        <script src="klayjs.js"></script>
         <script src="scripts/input.js"></script>
         <script src="scripts/utils.js"></script>
         <script src="scripts/hooks.js"></script>
