--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <div class="col-md-1 col-xs-6">
                 <strong >Input</strong>
                 <div class="row"></div>
+                <input style="width:16px;height:16px;" type="checkbox" id="manual-mode"/> Manual
             <button class="btn btn-default" onclick="document.getElementById('file').click();">Browse...</button>
             <div class="row"></div>
             <button class="btn btn-default" id="save">Save</button>
