Fixed: New picking system - needs some work Should now be able to control with mobile - though rotation is on 1 finger, panning on 3 Better selected connection colors - see globals.js Added some comments

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <script src="scripts/transform-controls2d.js"></script>
         <script src="scripts/transform-controls3d.js"></script>
         <script src="scripts/camera.js"></script>
-        <script src="scripts/graph-parser.js"></script>
-        <script src="scripts/graphics.js"></script>
+        <script src="scripts/parser.js"></script>
+        <script src="scripts/app.js"></script>
 
         <div style="margin:10px;">
         <h4><strong>Camera controls:</strong></h4>
