Red port highlight, Removed x- and y-axis in 2D control mode, Should allow loading of icons file with new browser

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             <a class="navbar-brand" href="Index.html">WAMS</a>
         </header>
           <input style="display:none;" type="file" id="file" name="files[]" />
+          <input style="display:none;" type="file" id="icons" name="icons[]" />
           <div class="col-md-1 col-xs-6">
                 <strong >Input</strong>
                 <div class="row"></div>
                 <input style="width:16px;height:16px;" type="checkbox" id="manual-mode"/> Manual
             <button class="btn btn-default" onclick="document.getElementById('file').click();">Browse...</button>
+            <button class="btn btn-default" onclick="document.getElementById('icons').click();">Browse Icons...</button>
             <div class="row"></div>
             <button class="btn btn-default" id="save">Save</button>
           </div>
