--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           <div class="row"></div>
 
-        <div id="glcontainer"></div>
+        <div id="glcontainer" tabindex="1"></div>
         <script src="scripts/three.js"></script>
         <script src="scripts/stats.js"></script>
         <script src="scripts/extensions.js"></script>
