Finnishing cleanup and commenting

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <header class="navbar navbar-fixed-top">
+            <a class="navbar-brand" href="">WAMS</a>
         </header>
           <input style="display:none;" type="file" id="file" name="files[]" />
           <input style="display:none;" type="file" id="icons" name="icons[]" />
