Removed Manual checkbox Added Nested radio button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="col-md-1 col-xs-6">
                 <strong >Input</strong>
                 <div class="row"></div>
-                <input style="width:16px;height:16px;" type="checkbox" id="manual-mode"/> Manual
+                <!-- <input style="width:16px;height:16px;" type="checkbox" id="manual-mode"/> Manual -->
             <button class="btn btn-default" onclick="document.getElementById('file').click();">Open</button>
             <button class="btn btn-default" onclick="document.getElementById('icons').click();">Open Icons</button>
             <div class="row"></div>
@@ -30,6 +30,7 @@
           <div class="col-md-1 col-xs-6">
             <form action="">
                 <input type="radio" name="mode" checked> Automatic<br>
+                <input type="radio" name="mode" > Nested<br>
                 <input type="radio" name="mode" > Manual<br>
                 <input type="radio" name="mode" > Visualization
             </form>
